# 1.8_inch_TFT_LCD_Pico

./: CMakeLists.txt  README.md
.github/workflows/: 1.8_inch_TFT.yml
lib/: CMakeLists.txt
src/: main.c
